--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,17 @@
-language: go
+language: minimal
 
-go:
-  - 1.14
+services:
+  - docker
 
 cache:
   directories:
-    - .build
-
-before_script:
-  - rmdir --ignore-fail-on-non-empty .build
+    - .ci-cache
 
 script:
   - >-
-    make all
-    POST_GENERATE='git diff --exit-code'
-    POST_FMT='git diff --exit-code'
+    DEBUG=1 ./ci
+    POST_GENERATE='[[ ${?} -eq 0 ]] && git diff --exit-code'
+    POST_FMT='[[ ${?} -eq 0 ]] && git diff --exit-code'
     GO_TEST_FLAGS='-race -coverprofile=coverage.txt'
 
 after_success:
